<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:layout_marginLeft="16dp"
    android:layout_marginRight="16dp"
    android:orientation="vertical"
    tools:context=".AddOrder">

    <com.google.android.material.chip.Chip
        android:id="@+id/orderNumberChip"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginBottom="16dp"
        android:text="@string/order_number"
        android:textAlignment="textStart"
        app:ensureMinTouchTargetSize="true" />

    <include
        layout="@layout/view_add_order_location"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content">
    </include>

    <include
        layout="@layout/view_add_order_tip"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content">
    </include>

    <Button
        android:id="@+id/saveButton"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center|center_horizontal|center_vertical"
        android:gravity="center|center_horizontal|center_vertical"
        android:text="@string/save"
        android:textAlignment="center" />

</LinearLayout>