<?xml version="1.0" encoding="utf-8"?>
<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".AddOrderNumberFragment">

    <!-- TODO: Update blank fragment layout -->
    <EditText
        android:id="@+id/orderNumber"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:ems="10"
        android:hint="@string/enter_order_number"
        android:imeOptions="actionDone"
        android:importantForAutofill="no"
        android:inputType="number"
        android:textColorHint="#757575" />

</FrameLayout>